--- a/emails/003.html
+++ b/emails/003.html
@@ -569,6 +569,12 @@
   display: inline;
   border-color: #999999;
 }
+.tag-development {
+  border-color: #85ff0a;
+}
+.tag-design {
+  border-color: #85ff0a;
+}
 .tag-tutorial {
   border-color: #85ff0a;
 }
