--- a/emails/006.html
+++ b/emails/006.html
@@ -619,7 +619,7 @@
                                                 <tr>
                                                     <td valign="top">
                                                         <div mc:edit="preheader_leftcol_content">
-                                                            <p id="preview">Welcome to the first Immersive Web Weekly!</p>
+                                                            <p id="preview"></p>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -632,7 +632,7 @@
                                                 <tr>
                                                     <td valign="top">
                                                         <div mc:edit="preheader_rightcol_content">
-                                                            <p><a href="https://immersivewebweekly.com/issues/001" target="_blank">View email in your browser</a></p>
+                                                            <p><a href="https://immersivewebweekly.com/issues/006" target="_blank">View email in your browser</a></p>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -668,82 +668,94 @@
                                 <!-- BEGIN MODULE: BODY CONTENT // -->
                                 <div mc:edit="body_content">
                                     <h1><a href="https://immersivewebweekly.com">Immersive Web Weekly</a></h1>
-                                    <div class="info">Issue #001, May 21, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
+                                    <div class="info">Issue #006, July 05, 2018, <a href="https://immersivewebweekly.com">immersivewebweekly.com</a></div>
                                     <div id="overview">
-                                        <p>Welcome to the first Immersive Web Weekly! Every week (at most), an issue will contain a collection of links of what's happening and what's new in the world of immersive web with new articles, tools, projects, spec development updates, events and more. Feel free to send feedback and links to <a href="mailto:immersivewebweekly@gmail.com">immersivewebweekly@gmail.com</a> or <a href="https://twitter.com/jsantell">@jsantell</a> on Twitter. I hope you enjoy!</p> <span>– Jordan</span>
+                                        <p>This issue was a bit later than expected, thanks for your patience! There's some pretty cool web hacking and VR UX prototyping research this week; enjoy!</p> <span>– Jordan</span>
                                     </div>
                                     <div id="content">
-                                        <h2><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/" target="_new">Experimenting with Computer Vision in WebXR</a></h2>
-                                        <p>Mozilla's <a href="https://blairmacintyre.me/">Blair MacIntyre</a> dives into their exploration in exposing computer vision features with WebXR. The research uses their experimental <a href="https://github.com/mozilla/webxr-viewer">WebXR Viewer</a> app, which implements Mozilla's experimental, non-standard WebXR API.</p>
+                                        <h2><a href="https://medium.com/webmr/n64-vr-with-javascript-e188de42ced5" target="_new">N64 VR with JavaScript</a></h2>
+                                        <p>Yes, running Legend of Zelda in a browser in VR. <a href="https://medium.com/@Avaer">Avaer Kazmer</a> explains the process of porting an N64 emulator to the web with WebXR and <a href="https://threejs.org">three.js</a>, as well as sharing the sibling project <a href="https://github.com/webmixedreality/exokit">Exokit</a>, a canvas-only VR browser.</p>
                                         <div class="meta">
+                                              <span class="tag tag-development">development</span>
                                             <span> > </span>
-                                            <span class="domain"><a href="https://blog.mozvr.com/experimenting-with-computer-vision-in-webxr/">mozvr.com</a></span>
+                                            <span class="domain"><a href="https://medium.com/webmr/n64-vr-with-javascript-e188de42ced5">medium.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="https://blairmacintyre.me/">
-                                                    Blair MacIntyre
+                                                <a href="https://medium.com/@Avaer">
+                                                    Avaer Kazmer
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://hackathon.virtuleap.com/" target="_new">Virtuleap&#x27;s Global WebXR Hackathon</a></h2>
-                                        <p>A competition exploring WebXR concepts on the full spectrum of VR and AR devices, <a href="https://virtuleap.com">Virtuleap</a>'s second Global WebXR Hackathon approaches, running May 25th to June 24th. Prizes, including XR devices, will be announced later this week on the launch date.</p>
+                                        <h2><a href="https://medium.com/@stinkstudios/creating-qalam-d016a0a52d56" target="_new">Creating &#x27;Qalam&#x27;</a></h2>
+                                        <p>A technical dive into the making of Project Qalam, an experience for sharing VR artwork for Ramadan. Qalam faced challenges rendering large Tilt Brush models on the web, making use of compression and workers for performance.</p>
                                         <div class="meta">
+                                              <span class="tag tag-development">development</span>
                                             <span> > </span>
-                                            <span class="domain"><a href="https://hackathon.virtuleap.com/">virtuleap.com</a></span>
+                                            <span class="domain"><a href="https://medium.com/@stinkstudios/creating-qalam-d016a0a52d56">medium.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="https://virtuleap.com">
-                                                    Virtuleap
+                                                <a href="https://www.stinkstudios.com/">
+                                                    Stink Studios
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/" target="_new">Amazon Sumerian now available</a></h2>
-                                        <p>Announced last year, Amazon's 3D web editor <a href="https://aws.amazon.com/sumerian/">Sumerian</a> is now available for all to try. Sumerian currently allows the creation of WebGL applications that leverage the WebVR API, as well as mobile applications that expose AR features to web content.</p>
+                                        <h2><a href="https://medium.com/vr-ux-ui/tvori-vr-ux-prototyping-tool-ea8fd3f0f409" target="_new">My favorite VR Prototyping Tool</a></h2>
+                                        <p>Product manager for <a href="https://lensreality.com/">LensVR</a> browser <a href="https://medium.com/@billy_co">Billy Vacheva</a> shares her experience exploring new VR UX using <a href="http://tvori.co/">Tvori</a> while prototyping an idea for VR browser bookmarks.</p>
                                         <div class="meta">
+                                              <span class="tag tag-design">design</span>
                                             <span> > </span>
-                                            <span class="domain"><a href="https://aws.amazon.com/blogs/aws/amazon-sumerian-now-generally-available/">amazon.com</a></span>
+                                            <span class="domain"><a href="https://medium.com/vr-ux-ui/tvori-vr-ux-prototyping-tool-ea8fd3f0f409">medium.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="https://aws.amazon.com/">
-                                                    Amazon
+                                                <a href="https://medium.com/@billy_co">
+                                                    Billy Vacheva
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467" target="_new">Space Rocks — Technical deep dive</a></h2>
-                                        <p><a href="http://stewartsmith.io">Stewart Smith</a> shares the process he used to make <a href="https://spacerocks.moar.io/">Space Rocks</a>, a WebVR ode to the game <em>Asteriods</em>. As the creator of <a href="https://github.com/stewdio/THREE.VRController">VRController</a>, Stewart explains his techniques working with controllers and designing an immersive game, with the corresponding, non-transpiled source code.</p>
+                                        <h2><a href="https://www.youtube.com/watch?v&#x3D;Aa6G1b5TbSE" target="_new">Look ma! No hands!</a></h2>
+                                        <p><a href="https://www.samsung.com/">Samsung</a>'s <a href="https://diekus.com/">Diego González</a> speaks on the state of VR on the web, its advantages as a platform, and responsively supporting different devices and controllers.</p>
                                         <div class="meta">
+                                              <span class="tag tag-video">video</span>
                                             <span> > </span>
-                                            <span class="domain"><a href="https://medium.com/@stew_rtsmith/space-rocks-technical-deep-dive-9bf67fb8a467">medium.com</a></span>
+                                            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;Aa6G1b5TbSE">youtube.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="http://stewartsmith.io">
-                                                    Stewart Smith
+                                                <a href="https://diekus.com/">
+                                                    Diego González
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity" target="_new">SVVR&#x27;s MULTIVERSE and Reality Portals</a></h2>
-                                        <p>On their fifth anniversary, <a href="https://svvr.com">SVVR</a> is launching MULTIVERSE, an open design initiative powering real-time, live event communications between real locations and virtual worlds, powered by WebVR. The <a href="http://voicesofvr.com">Voices of VR</a> podcast covers this announcement in more detail in <a href="http://voicesofvr.com/647-merging-irl-events-with-vr-via-svvrs-reality-portals-metaverse-intiative/">episode #647</a>, an interview with SVVR's founder, <a href="https://twitter.com/karlkrantz">Karl Krantz</a>, on SVVR's larger community efforts.</p>
+                                        <h2><a href="http://blog.leapmotion.com/designing-cat-explorer/" target="_new">Designing Cat Explorer</a></h2>
+                                        <p><a href="https://www.magicleap.com/">Magic Leap</a> shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.</p>
                                         <div class="meta">
+                                              <span class="tag tag-design">design</span>
                                             <span> > </span>
-                                            <span class="domain"><a href="https://svvr.com/press-releases/svvr-launches-multiverse-for-live-events-and-joins-vrba-high-fidelity">svvr.com</a></span>
+                                            <span class="domain"><a href="http://blog.leapmotion.com/designing-cat-explorer/">leapmotion.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="https://svvr.com">
-                                                    SVVR
+                                                <a href="http://blog.leapmotion.com/author/eugk/">
+                                                    Eugene Krivoruchko and Keiichi Matsuda
                                                 </a>
                                             </span>
                                         </div>
-                                        <h2><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103" target="_new">Delaying Chrome&#x27;s Web Audio autoplay policy</a></h2>
-                                        <p>After <a href="https://blog.google/products/chrome/improving-autoplay-chrome/">announcing Chrome's autplay policy change</a> earlier this month, requiring user gesture before enabling media content, the Chrome team received pushback from creative developers who have had audio-driven 3D and VR experiences broken from the change. Chrome is now temporarily rolling back the new policy for Web Audio, with plans on re-enabling <a href="https://bugs.chromium.org/p/chromium/issues/detail?id=840866#c103">the new policy</a> in October.</p>
+                                        <h2><a href="https://twitter.com/Tojiro/status/1013669380595466241" target="_new">Brandon Jones&#x27; #XRSummer</a></h2>
+                                        <p>Every day for the month of July, <a href="https://immersive-web.github.io/webxr/">WebXR spec</a> editor <a href="https://blog.tojicode.com/">Brandon Jones</a> has been tweeting out an XR app, mechanic or technique idea. Follow along!</p>
                                         <div class="meta">
                                             <span> > </span>
-                                            <span class="domain"><a href="https://bugs.chromium.org/p/chromium/issues/detail?id&#x3D;840866#c103">chromium.org</a></span>
+                                            <span class="domain"><a href="https://twitter.com/Tojiro/status/1013669380595466241">twitter.com</a></span>
                                             <span> | </span>
                                             <span class="author">
-                                                <a href="https://bugs.chromium.org/u/johnpallett@chromium.org/">
-                                                    John Pallett
+                                                <a href="https://blog.tojicode.com/">
+                                                    Brandon Jones
                                                 </a>
                                             </span>
+                                        </div>
+                                        <h2><a href="https://www.youtube.com/watch?v&#x3D;GuA1mYG0-xE" target="_new">Silicon Valley WebGL/WebVR Meetup: glTF</a></h2>
+                                        <p>Last month, there was a Silicon Valley WebGL/WebVR meetup focused on glTF. Check out the presentations from folks representing Microsoft, Mozilla, Google, Adobe and Facebook on the glTF ecosystem, compression and more.</p>
+                                        <div class="meta">
+                                            <span> > </span>
+                                            <span class="domain"><a href="https://www.youtube.com/watch?v&#x3D;GuA1mYG0-xE">youtube.com</a></span>
+                                            <span> | </span>
                                         </div>
                                     </div>
                                 </div>
@@ -797,7 +809,7 @@
                                         <td valign="top" id="utilityBar">
                                             <div mc:edit="utility_bar">
                                                 <a href="*|UNSUB|*" class="utilityLink">unsubscribe from this list</a><span class="mobileHide"> | </span><a href="*|UPDATE_PROFILE|*" class="utilityLink">update subscription preferences</a>
-                                                <!-- *|IFNOT:ARCHIVE_PAGE|* --><span class="mobileHide"> | </span><a href="https://immersivewebweekly.com/issues/001" class="utilityLink">view email in browser</a>
+                                                <!-- *|IFNOT:ARCHIVE_PAGE|* --><span class="mobileHide"> | </span><a href="https://immersivewebweekly.com/issues/006" class="utilityLink">view email in browser</a>
                                                 <!-- *|END:IF|* -->
                                             </div>
                                         </td>
